Segundo commit, se agregó 3 cajas de texto

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-    <input type="text" placeholder="Ingrese datos">
+    <input type="text" placeholder="Ingrese datos 1"> </br> </br>
+    <input type="text" placeholder="Ingrese datos 2"> </br> </br>
+    <input type="text" placeholder="Ingrese datos 3">
 </body>
 </html>
